--- a/membros.html
+++ b/membros.html
@@ -161,7 +161,7 @@
         <div class="space-y-3">
           <div class="flex items-center justify-between">
             <label class="text-sm font-medium text-gray-700">Guerra de Guilda</label>
-            <label class="switch"><input type="checkbox" id="guild-war"><span class="slider"></span></label>
+            <input type="checkbox" id="guild-war" class="w-5 h-5 accent-emerald-500">
           </div>
           <div>
             <label class="text-xs text-gray-500 mb-1 block">Meta da Guerra</label>
@@ -174,7 +174,7 @@
         <div class="space-y-3">
           <div class="flex items-center justify-between">
             <label class="text-sm font-medium text-gray-700">Meta Semanal</label>
-            <label class="switch"><input type="checkbox" id="weekly-meta"><span class="slider"></span></label>
+            <input type="checkbox" id="weekly-meta" class="w-5 h-5 accent-emerald-500">
           </div>
           <div>
             <label class="text-xs text-gray-500 mb-1 block">Valor da Meta</label>
@@ -214,7 +214,6 @@
 
     // Tag configurável (Firestore: configGuilda/{uid}.tagMembros)
     let memberTag = null;
-    let hasTagManualOverride = false;
 
     function escapeRegExp(str) {
       return String(str).replace(/[.*+?^${}()|[\]\\]/g, "\\$&");
@@ -270,23 +269,20 @@
       const nickEl = document.getElementById('nick');
       if (!hasTagEl || !nickEl) return;
 
-      // Se o usuário marcou/desmarcou manualmente, não sobrescreve.
-      if (hasTagManualOverride) return;
+      // Se não tem tag configurada, não deixa marcado automaticamente
+      if (!memberTag) {
+        hasTagEl.checked = false;
+        return;
+      }
 
-      // Sem tag configurada, não temos como detectar automaticamente.
-      if (!memberTag) return;
+      // Se o usuário marcou manualmente, não desmarca sozinho
+      // (isso é importante pra tags estilizadas diferentes do padrão)
+      if (hasTagEl.dataset.manual === '1' && hasTagEl.checked) return;
 
       hasTagEl.checked = nickHasMemberTag(nickEl.value);
     }
 
-        // Se o usuário mexer no switch manualmente, a verificação automática não sobrescreve.
-    document.addEventListener('change', (ev) => {
-      if (ev && ev.target && ev.target.id === 'has-tag') {
-        hasTagManualOverride = true;
-      }
-    });
-
-    // Atualiza automaticamente o "Tem tag?" conforme o nick muda (API/digitação)
+        // Atualiza automaticamente o "Tem tag?" conforme o usuário digita/cola o nick
     document.addEventListener('input', (ev) => {
       if (ev && ev.target && ev.target.id === 'nick') {
         syncHasTagToggleFromNick();
@@ -324,6 +320,9 @@
             showToast('error', 'Nenhuma tag configurada. Configure em Ajustes.');
             hasTagEl.checked = false;
           }
+
+          // Se o usuário mexeu manualmente, grava isso pra não ficar “brigando” com a auto-verificação
+          hasTagEl.dataset.manual = '1';
         });
       }
 
@@ -472,6 +471,9 @@
       document.getElementById('member-id').value = '';
       document.getElementById('modal-title').innerText = 'Novo Membro';
       document.getElementById('api-feedback').innerHTML = '';
+      // novo cadastro: volta a auto-verificação normal
+      const hasTagEl = document.getElementById('has-tag');
+      if (hasTagEl) hasTagEl.dataset.manual = '0';
       document.getElementById('modal').classList.remove('hidden');
     };
 
@@ -483,18 +485,19 @@
       document.getElementById('member-id').value = m.id;
       document.getElementById('visible-id').value = m.visibleId;
       document.getElementById('nick').value = (m.nick || '');
-      hasTagManualOverride = false;
-      syncHasTagToggleFromNick();
       document.getElementById('whatsapp').value = m.whatsapp;
       document.getElementById('guild-war').checked = m.guildWar;
       document.getElementById('guild-war-meta').value = m.guildWarMeta;
       document.getElementById('weekly-meta').checked = m.weeklyMeta;
       document.getElementById('weekly-meta-value').value = m.weeklyMetaValue;
-      document.getElementById('has-tag').checked = m.hasTag;
+      const hasTagEl = document.getElementById('has-tag');
+      // no editar: se já estava marcado no banco, mantém marcado mesmo se a tag for estilizada
+      hasTagEl.checked = !!m.hasTag || nickHasMemberTag(m.nick || '');
+      hasTagEl.dataset.manual = m.hasTag ? '1' : '0';
       document.getElementById('join-date').value = m.joinDate;
       
-            // Recalcula automaticamente se o nick contém a tag
-      syncHasTagToggleFromNick();
+      // Só tenta auto-verificar quando não veio marcado do banco
+      if (!m.hasTag) syncHasTagToggleFromNick();
 document.getElementById('modal-title').innerText = 'Editar Membro';
       document.getElementById('modal').classList.remove('hidden');
     };
@@ -532,8 +535,6 @@ document.getElementById('modal-title').innerText = 'Editar Membro';
 
         if (res.ok && name) {
           document.getElementById('nick').value = name;
-      hasTagManualOverride = false;
-      syncHasTagToggleFromNick();
           feedback.innerHTML = `<span class="text-emerald-600 font-bold">✓ ${name} (Nível ${Number.isFinite(level) ? level : '?'})</span> <span class="text-gray-500">Dados fornecidos por api.mitsuri.fun!</span>`;
           syncHasTagToggleFromNick();
         } else {
@@ -563,8 +564,12 @@ document.getElementById('modal-title').innerText = 'Editar Membro';
 
       const rawNick = document.getElementById('nick').value.trim();
       const hasTag = document.getElementById('has-tag').checked;
-      // Importante: marcar "Tem Tag" NÃO altera o nick.
-      // Algumas tags são estilizadas (fontes/símbolos diferentes), então o nick fica exatamente como o usuário digitou.
+      if (hasTag && !memberTag) {
+        showToast('error', 'Nenhuma tag configurada. Vá em Ajustes e configure antes.');
+        return;
+      }
+      // IMPORTANTE: marcar “Tem tag” NÃO altera o nick.
+      // (a tag pode ser estilizada e você quer manter do jeito que a pessoa usa)
       const finalNick = rawNick;
 
       const payload = {
