--- a/eventos.html
+++ b/eventos.html
@@ -44,6 +44,7 @@
 
   .clamp2{display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;}
 </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body class="min-h-screen bg-white text-slate-900">
 
