--- a/stats.html
+++ b/stats.html
@@ -42,6 +42,7 @@
   .dd-item[aria-selected="true"] { background: rgba(16,185,129,.16); color:#d1fae5; }
 
 </style>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body class="min-h-screen bg-white text-slate-900">
 
