--- a/chefe.html
+++ b/chefe.html
@@ -11,7 +11,7 @@
   </script>
   <link rel="stylesheet" href="./style.css" />
 </head>
-<body class="bg-gray-50/80 font-sans antialiased">
+<body class="bg-gray-50/80 font-sans antialiased neon">
 
   <div class="flex min-h-screen">
     <!-- Overlay Mobile -->
