--- a/eventos.html
+++ b/eventos.html
@@ -11,6 +11,7 @@
     }
   </script>
   <script src="https://unpkg.com/lucide@latest"></script>
+  <link rel="stylesheet" href="./style.css" />
 
   <style>
     /* micro UX */
@@ -45,7 +46,7 @@
   .clamp2{display:-webkit-box;-webkit-line-clamp:2;-webkit-box-orient:vertical;overflow:hidden;}
 </style>
 </head>
-<body class="min-h-screen bg-white text-slate-900">
+<body class="min-h-screen bg-white text-slate-900 neon">
 
   
   <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden bg-black/40"></div>
