--- a/jogador.html
+++ b/jogador.html
@@ -11,7 +11,7 @@
   </script>
   <link rel="stylesheet" href="./style.css" />
 </head>
-<body class="bg-gray-50 text-gray-900">
+<body class="bg-gray-50 text-gray-900 neon">
   <div class="min-h-screen flex">
     <!-- Sidebar -->
     <aside id="sidebar" class="fixed top-0 left-0 h-full w-72 bg-white border-r border-gray-200 z-50 transform -translate-x-full transition-transform duration-300 lg:translate-x-0 lg:static">
