--- a/suporte.html
+++ b/suporte.html
@@ -11,6 +11,7 @@
     }
   </script>
   <script src="https://unpkg.com/lucide@latest"></script>
+  <link rel="stylesheet" href="./style.css" />
 
   <style>
     /* micro UX */
@@ -30,7 +31,7 @@
     .drawer-panel.show{ transform: translateX(0); }
   </style>
 </head>
-<body class="min-h-screen bg-white text-slate-900">
+<body class="min-h-screen bg-white text-slate-900 neon">
 
   
   <div id="sidebar-overlay" class="fixed inset-0 z-40 hidden bg-black/40"></div>
