--- a/ajustes.html
+++ b/ajustes.html
@@ -8,7 +8,7 @@
   <script src="https://unpkg.com/lucide@latest"></script>
   <link rel="stylesheet" href="./style.css" />
 </head>
-<body class="bg-gray-50/80">
+<body class="bg-gray-50/80 neon">
 
   <div class="flex min-h-screen">
     <!-- Menu Mobile Overlay -->
