--- a/membros.html
+++ b/membros.html
@@ -32,7 +32,7 @@
 
   </style>
 </head>
-<body class="bg-gray-50/80">
+<body class="bg-gray-50/80 neon">
 
   <div class="flex min-h-screen">
     <!-- Menu Mobile Overlay -->
