--- a/upgrade.html
+++ b/upgrade.html
@@ -11,7 +11,7 @@
   </script>
   <link rel="stylesheet" href="./style.css" />
 </head>
-<body class="bg-gray-50/80">
+<body class="bg-gray-50/80 neon">
 
   <div class="flex min-h-screen">
     <!-- Menu Mobile Overlay -->
